Entrega Aplicando SASS-II - se agregan resto de las pages al site y se genera el SEO

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <ul>
             <li class="disabled"><a href="index.html">Inicio</a></li>
                 <li> <a href="./pages/whoare.html">Conocenos</a></li>
-                    <li> <a href="#">Soluciones</a></li>
-                  <li> <a href="#">Clientes</a></li>
-                <li> <a href="#">Contactanos</a></li>
-              <li> <a href="#">Novedades</a></li>
+                    <li> <a href="./pages/solu.html">Soluciones</a></li>
+                  <li> <a href="./pages/client.html">Clientes</a></li>
+                <li> <a href="./pages/contact.html">Contactanos</a></li>
+              <li> <a href="./pages/news.html">Novedades</a></li>
           </ul>
     </nav>
 
@@ -48,7 +48,7 @@
                   <h2>Nuestros Partners</h2>
             
         <div class="container">
-            <img src="images/Partners.jpg" width="60%" style="border: solid black; border-radius: 10px;" alt="partners">
+            <img src="images/Partners.jpg" alt="partners">
         </div>
     </section>
 
