--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- SEO -->
-    <meta name="description" content="La mejor empresa de soluciones tecnologicas">
-    <meta name="keywords" content="soporte a empresas, tecnologia, desarrollo, software, infraestructura, servidores, sistemas, confianza, seguridad">
+<meta name="description" content="La mejor empresa de soluciones tecnologicas">
+<meta name="keywords" content="soporte a empresas, tecnologia, desarrollo, software, infraestructura, servidores, sistemas, confianza, seguridad">
 <!-- Archivo CSS -->
-    <link rel="stylesheet" href="css/risestyle.css">
-
+    <link rel="stylesheet" href="../css/risestyle.css">
+<!-- Conexiones Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="shortcut icon" href="images/logorise-sf.png" type="image/x-icon">
+<!-- Iconos -->
     <script src="https://kit.fontawesome.com/8e1370f7a2.js" crossorigin="anonymous"></script>
 
     <title>Rise Technology - Solcuiones Tecnologicas</title>
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="images/logorise-sf.png" width="14%" alt="Rise Technology"></a>
+        <a href="index.html"><img src="images/logorise-sf.png" alt="Rise Technology"></a>
     </header>
 
     <nav>
