--- a/pages/whoare.html
+++ b/pages/whoare.html
@@ -5,24 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- SEO -->
-    <meta name="description" content="Conoce a quienes saben de tecnologia">
-    <meta name="keywords" content="confianza, seguridad, atencion calificada, organizacion, ayuda las 24hs">
+<meta name="description" content="Conoce a quienes saben de tecnologia">
+<meta name="keywords" content="confianza, seguridad, atencion calificada, organizacion, ayuda las 24hs">
 <!-- Archivo CSS -->
     <link rel="stylesheet" href="../css/risestyle.css">
-
+<!-- Conexiones Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="shortcut icon" href="images/logorise-sf.png" type="image/x-icon">
+<!-- Iconos -->
     <script src="https://kit.fontawesome.com/8e1370f7a2.js" crossorigin="anonymous"></script>
 
     <title>Conocenos - Rise Tech</title>
 </head>
 <body>
     <header>
-        <a href="../index.html"><img src="../images/logorise-sf.png" width="14%" alt="Rise Technology"></a>
+        <a href="../index.html"><img src="../images/logorise-sf.png" alt="Rise Technology"></a>
     </header>
 
     <nav>
