Entrega Aplicando SASS-II - se corrigen errores de linkeo en el index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="description" content="La mejor empresa de soluciones tecnologicas">
 <meta name="keywords" content="soporte a empresas, tecnologia, desarrollo, software, infraestructura, servidores, sistemas, confianza, seguridad">
 <!-- Archivo CSS -->
-    <link rel="stylesheet" href="../css/risestyle.css">
+    <link rel="stylesheet" href="css/risestyle.css">
 <!-- Conexiones Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,11 +29,11 @@
     <nav>
         <ul>
             <li class="disabled"><a href="index.html">Inicio</a></li>
-                <li> <a href="./pages/whoare.html">Conocenos</a></li>
-                    <li> <a href="./pages/solu.html">Soluciones</a></li>
-                  <li> <a href="./pages/client.html">Clientes</a></li>
-                <li> <a href="./pages/contact.html">Contactanos</a></li>
-              <li> <a href="./pages/news.html">Novedades</a></li>
+                <li> <a href="pages/whoare.html">Conocenos</a></li>
+                    <li> <a href="pages/solu.html">Soluciones</a></li>
+                  <li> <a href="pages/client.html">Clientes</a></li>
+                <li> <a href="pages/contact.html">Contactanos</a></li>
+              <li> <a href="pages/news.html">Novedades</a></li>
           </ul>
     </nav>
 
