Entrega Aplicando SASS-II - se corrigen errores ortograficos y se agrega readme-cambios

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- Iconos -->
     <script src="https://kit.fontawesome.com/8e1370f7a2.js" crossorigin="anonymous"></script>
 
-    <title>Rise Technology - Solcuiones Tecnologicas</title>
+    <title>Rise Technology - Soluciones Tecnologicas</title>
 </head>
 <body>
     <header>
