--- a/pages/client.html
+++ b/pages/client.html
@@ -19,7 +19,7 @@
 <!-- Iconos -->
     <script src="https://kit.fontawesome.com/8e1370f7a2.js" crossorigin="anonymous"></script>
 
-    <title>Soluciones - Rise Tech</title>
+    <title>Nuestros Clientes - Rise Tech</title>
 </head>
 <body>
     <header>
