--- a/pages/whoare.html
+++ b/pages/whoare.html
@@ -19,7 +19,7 @@
 <!-- Iconos -->
     <script src="https://kit.fontawesome.com/8e1370f7a2.js" crossorigin="anonymous"></script>
 
-    <title>Conocenos - Rise Tech</title>
+    <title>Quienes Somos - Rise Tech</title>
 </head>
 <body>
     <header>
