--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <meta name="keywords" content="soporte a empresas, tecnologia, desarrollo, software, infraestructura, servidores, sistemas, confianza, seguridad">
 <!-- Archivo CSS -->
     <link rel="stylesheet" href="css/risestyle.css">
+<!-- CSS BootStrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <!-- Conexiones Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,40 +23,53 @@
 
     <title>Rise Technology - Soluciones Tecnologicas</title>
 </head>
-<body>
-    <header>
-        <a href="index.html"><img src="images/logorise-sf.png" alt="Rise Technology"></a>
-    </header>
+    <body>
+        <header>
+            <a href="index.html"><img src="images/logorise-sf.png" alt="Rise Technology"></a>
+        </header>
 
-    <nav>
-        <ul>
+<!-- Barra de Navegacion-->
+<nav class="navbar navbar-expand-lg navbar-light navcustom"> <!--Barra Oculta-->   
+    <div class="container-fluid justify-content-center" >    <!--Boton Oculto-->   
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav" style="padding: 25px;">
+        <ul class="navbar-nav">
             <li class="disabled"><a href="index.html">Inicio</a></li>
-                <li> <a href="pages/whoare.html">Conocenos</a></li>
-                    <li> <a href="pages/solu.html">Soluciones</a></li>
-                  <li> <a href="pages/client.html">Clientes</a></li>
-                <li> <a href="pages/contact.html">Contactanos</a></li>
-              <li> <a href="pages/news.html">Novedades</a></li>
-          </ul>
-    </nav>
+                  <li> <a href="pages/whoare.html">Conocenos</a></li>
+                      <li> <a href="pages/solu.html">Soluciones</a></li>
+                    <li> <a href="pages/client.html">Clientes</a></li>
+                  <li> <a href="pages/contact.html">Contactanos</a></li>
+                <li> <a href="pages/news.html">Novedades</a></li>
+            </ul>
+      </div>
+    </div>
+  </nav>      
+                <!-- Fin Barra de Navegacion -->
 
-        <section class="contenido">
+<!-- Contenido-->
+    <section class="contenido">
 
-            <h1>Bienvenidos a Rise Technology</h1>
-
+        <h1>Bienvenidos a Rise Technology</h1>
             <p> <strong>Rise Technology</strong>  es desde 2012 una empresa dedicada a brindar soporte y soluciones informáticas de la más alta calidad con la mejor atención al cliente.</p>
             <p>Brindamos respuestas integrales y funcionales ajustándonos a lo que se nos solicita.</p>
             <p>Actuamos como el área interna de sistemas de la empresa, comprometiéndonos con cada cliente para brindar la mejor solución posible.</p>
             <p>Nos hacemos cargo del soporte técnico de sus equipos y servidores para que usted puedas centrarse en su negocio, brindando un servicio profesional y de calidad.</p>
 
-                  <h2>Nuestros Partners</h2>
+        <h2>Nuestros Partners</h2>
             
-        <div class="container">
-            <img src="images/Partners.jpg" alt="partners">
-        </div>
+            <div class="container">
+                <img src="images/Partners.jpg" alt="partners">
+            </div>
     </section>
+                <!-- Fin Contenido -->
 
+<!-- Boton Flotante Whatsapp -->
     <a href="https://wa.me/5491131276111" class="whatsapp" target="_blank"><i class="fa fa-whatsapp whatsapp-icon"></i></a>
+            <!-- Fin Boton Flotante Whatsapp -->
 
+<!-- Pie de Pagina-->
     <footer class="pie-pagina">
         <div class="grupo-1">
             <div class="box">
@@ -82,5 +97,11 @@
             <small>&copy; 2022 <b>Risetech</b> - Todos los Derechos Reservados. <br> Diseño Lucas LLamanzarez.</small>
         </div>
     </footer>
-</body>
+                <!-- Fin Pie de Pagina -->
+
+<!-- JS BootStrap -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
+        </body>
 </html> 
