--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,6 +9,8 @@
     <meta name="keywords" content="Contacto, estamos, cerca, tuyo, contas con nosotros, ayuda">
 <!-- Archivo CSS -->
     <link rel="stylesheet" href="../css/risestyle.css">
+<!-- CSS BootStrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <!-- Conexiones Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,23 +28,35 @@
         <a href="../index.html"><img src="../images/logorise-sf.png" alt="Rise Technology"></a>
     </header>
 
-    <nav>
-        <ul>
+<!-- Barra de Navegacion-->
+<nav class="navbar navbar-expand-lg navbar-light navcustom"> <!--Barra Oculta-->   
+    <div class="container-fluid justify-content-center" >    <!--Boton Oculto-->   
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav" style="padding: 25px;">
+        <ul class="navbar-nav">
             <li><a href="../index.html">Inicio</a></li>
-                <li><a href="whoare.html">Conocenos</a></li>
-                    <li> <a href="solu.html">Soluciones</a></li>
-                  <li> <a href="client.html">Clientes</a></li>
-                <li class="disabled"> <a href="contact.html">Contactanos</a></li>
-              <li> <a href="news.html">Novedades</a></li>
-          </ul>
-    </nav>
+                  <li> <a href="whoare.html">Conocenos</a></li>
+                      <li> <a href="solu.html">Soluciones</a></li>
+                    <li> <a href="client.html">Clientes</a></li>
+                  <li class="disabled"> <a href="contact.html">Contactanos</a></li>
+                <li> <a href="news.html">Novedades</a></li>
+            </ul>
+      </div>
+    </div>
+  </nav>      
+            <!-- Fin Barra de Navegacion -->
 
+<!-- Contenido -->
     <section class="contenido" style="padding: 25px;">
       
         <!-- Div Formulario -->
         <div class="contact-form">
+
             <!-- Formulario -->
             <form method="get" action="msg.html">
+
                 <!-- Campos -->
                 <div data-wow-delay=".5s">
                     <!-- Nombre -->
@@ -52,23 +66,29 @@
                     <!-- Asunto -->
                     <input type="text" name="subject" id="subject" required="required" class="form borcam"  placeholder="Asunto" />
                 </div> <!-- Fin Div Campos -->
+
                 <!-- Area de Mensaje -->
                 <div data-wow-delay=".5s">
+
                     <!-- Mensaje -->
                     <textarea name="message" id="message" class="form textarea borcam"  placeholder="Mensaje"></textarea>
-                </div>  <!-- Fin Area Mensaje -->
+                </div>    <!-- Fin Area Mensaje -->
+
                 <!-- Div Boton -->
                 <div >
                     <button type="submit" id="submit" name="submit" class="form-btn semibold">Enviar Mensaje</button>
                     <button type="reset" id="reset" name="reset" class="form-btn semibold">Limpiar</button> 
-                </div><!-- End Bottom Submit -->
+                </div>   <!-- End Bottom Submit -->
             </form>
-        </div><!-- Fin Formulario -->
-    
+        </div>   <!-- Fin Formulario -->
  </section>
+        <!-- Fin Contenido -->
 
+<!-- Boton Flotante Whatapps -->
     <a href="https://wa.me/5491131276111" class="whatsapp" target="_blank"><i class="fa fa-whatsapp whatsapp-icon"></i></a>
+        <!-- Fin Boton Flotante Whatapps -->
 
+<!-- Pie de Pagina -->
     <footer class="pie-pagina">
         <div class="grupo-1">
             <div class="box">
@@ -96,5 +116,11 @@
             <small>&copy; 2022 <b>Risetech</b> - Todos los Derechos Reservados. <br> Diseño Lucas LLamanzarez.</small>
         </div>
     </footer>
-</body>
+            <!-- Fin Pie de Pagina -->
+
+<!-- JS BootStrap -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
+        </body>
 </html> 
