--- a/pages/solu.html
+++ b/pages/solu.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- SEO -->
-<meta name="description" content="Las mejores soluciones para tu empresa">
-<meta name="keywords" content="Integrales, eficientes, garantia, sustentabilidad, durabilidad, conformidad">
+    <meta name="description" content="Las mejores soluciones para tu empresa">
+    <meta name="keywords" content="Integrales, eficientes, garantia, sustentabilidad, durabilidad, conformidad">
 <!-- Archivo CSS -->
     <link rel="stylesheet" href="../css/risestyle.css">
+<!-- CSS BootStrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <!-- Conexiones Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,52 +23,69 @@
 
     <title>Soluciones - Rise Tech</title>
 </head>
-<body>
-    <header>
-        <a href="../index.html"><img src="../images/logorise-sf.png" alt="Rise Technology"></a>
-    </header>
+    <body>
+        <header>
+            <a href="../index.html"><img src="../images/logorise-sf.png" alt="Rise Technology"></a>
+        </header>
 
-    <nav>
-        <ul>
+<!-- Barra de Navegacion-->
+<nav class="navbar navbar-expand-lg navbar-light navcustom"> <!--Barra Oculta-->   
+    <div class="container-fluid justify-content-center" >    <!--Boton Oculto-->   
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav" style="padding: 25px;">
+        <ul class="navbar-nav">
             <li><a href="../index.html">Inicio</a></li>
-                <li><a href="whoare.html">Conocenos</a></li>
-                    <li class="disabled"> <a href="solu.html">Soluciones</a></li>
-                  <li> <a href="client.html">Clientes</a></li>
-                <li> <a href="contact.html">Contactanos</a></li>
-              <li> <a href="news.html">Novedades</a></li>
-          </ul>
-    </nav>
+                  <li> <a href="whoare.html">Conocenos</a></li>
+                      <li class="disabled"> <a href="solu.html">Soluciones</a></li>
+                    <li> <a href="client.html">Clientes</a></li>
+                  <li> <a href="contact.html">Contactanos</a></li>
+                <li> <a href="news.html">Novedades</a></li>
+            </ul>
+      </div>
+    </div>
+  </nav>      
+                <!-- Fin Barra de Navegacion -->
 
+<!-- Contenido -->
     <section class="contenido">
         <div>
             <div>
                 <h2>Infraestructura</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam suscipit dignissimos, maiores nobis, quisquam, sapiente modi non quia dolores consectetur dolorem? Labore necessitatibus itaque dolorem vero perspiciatis voluptate corrupti natus.</p>
             </div>
+
                 <div class="container">
-                    <img src="../images/imginfra.png" alt="Grupo Risetech" >
+                        <img src="../images/imginfra.png" alt="Grupo Risetech" >
                 </div>
             
                 <div> 
                     <h2>Software</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos rem dolorem velit voluptas harum delectus at sit architecto quas repellendus hic recusandae ipsa similique voluptatem libero error, nulla distinctio quidem!</p>    
                 </div>
+
                     <div class="container"> 
-                        <img src="../images/imgsoft.jpeg" alt="Objetivos Risetech"> 
+                            <img src="../images/imgsoft.jpeg" alt="Objetivos Risetech"> 
                     </div>
 
                 <div> 
                     <h2>Auditoria - Seguridad</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos rem dolorem velit voluptas harum delectus at sit architecto quas repellendus hic recusandae ipsa similique voluptatem libero error, nulla distinctio quidem!</p>    
                 </div>
+
                     <div class="container"> 
                             <img src="../images/imgaudit.jpg" alt="Objetivos Risetech">
-                </div>
+                    </div>
         </div>
     </section>
+            <!-- Fin Contenido -->
 
+<!-- Boton Flotante de Whatsapp  -->
     <a href="https://wa.me/5491131276111" class="whatsapp" target="_blank"><i class="fa fa-whatsapp whatsapp-icon"></i></a>
+            <!-- Fin Boton Flotante de Whatsapp  -->
 
+<!-- Pie de Pagina  -->
     <footer class="pie-pagina">
         <div class="grupo-1">
             <div class="box">
@@ -94,5 +113,11 @@
             <small>&copy; 2022 <b>Risetech</b> - Todos los Derechos Reservados. <br> Diseño Lucas LLamanzarez.</small>
         </div>
     </footer>
-</body>
+            <!-- Fin Pie de Pagina  -->
+
+<!-- JS BootStrap -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
+        </body>
 </html> 
