Entrega Proyecto Final - Se modifican y acomodan textos.

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
     <section class="contenido">
 
         <h1>Bienvenidos a Rise Technology</h1>
-            <p> <strong>Rise Technology</strong>  es desde 2012 una empresa dedicada a brindar soporte y soluciones informáticas de la más alta calidad con la mejor atención al cliente.</p>
-            <p>Brindamos respuestas integrales y funcionales ajustándonos a lo que se nos solicita.</p>
-            <p>Actuamos como el área interna de sistemas de la empresa, comprometiéndonos con cada cliente para brindar la mejor solución posible.</p>
-            <p>Nos hacemos cargo del soporte técnico de sus equipos y servidores para que usted puedas centrarse en su negocio, brindando un servicio profesional y de calidad.</p>
+            <p> <strong>Rise Technology</strong>  es desde 2012 una empresa dedicada a brindar soporte y soluciones informáticas de la más alta calidad con la mejor atención al cliente. <br>
+            Brindamos respuestas integrales y funcionales ajustándonos a lo que se nos solicita. <br>
+            Actuamos como el área interna de sistemas de la empresa, comprometiéndonos con cada cliente para brindar la mejor solución posible. <br>
+            Nos hacemos cargo del soporte técnico de sus equipos y servidores para que usted puedas centrarse en su negocio, brindando un servicio profesional y de calidad.</p>
 
         <h2>Nuestros Partners</h2>
             
