--- a/pages/client.html
+++ b/pages/client.html
@@ -52,8 +52,10 @@
     <section class="contenido">
         <div>
             <h2>Nuestros Clientes</h2>
-            <p>Rise Technology es desde 2012 una empresa dedicada a brindar soporte y soluciones informáticas de la más alta calidad con la mejor atención al cliente. Brindamos respuestas integrales y funcionales ajustándonos a lo que se nos solicita. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Lorem ipsum dolor sit, amet consectetur adipisicing elit. In commodi illo itaque soluta consectetur incidunt rerum dignissimos, at ipsum ducimus odio recusandae voluptates neque tempora libero impedit a qui obcaecati?.</p>
-            <p>Actuamos como el área interna de sistemas de la empresa, comprometiéndonos con cada cliente para brindar la mejor solución posible. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti earum exercitationem, accusamus quia placeat eveniet voluptatem ex, tempore provident neque veritatis veniam voluptatum optio iusto unde. Est officiis recusandae placeat!</p>
+            <p>Rise Technology es desde 2012 una empresa dedicada a brindar soporte y soluciones informáticas de la más alta calidad con la mejor atención al cliente. Brindamos respuestas integrales y funcionales ajustándonos a lo que se nos solicita. <br>
+            Actuamos como el área interna de sistemas de la empresa, comprometiéndonos con cada cliente para brindar la mejor solución posible. <br>
+            Aqui destacamos algunos de nuestros mejores clientes, quienes confiaron y confian en nostoros plenamente:</p>
+
 
             <div class="container">
                 <img src="../images/clientes.jpg" alt="Clientes Rise Tech">
