--- a/pages/solu.html
+++ b/pages/solu.html
@@ -53,7 +53,9 @@
         <div>
             <div>
                 <h2>Infraestructura</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam suscipit dignissimos, maiores nobis, quisquam, sapiente modi non quia dolores consectetur dolorem? Labore necessitatibus itaque dolorem vero perspiciatis voluptate corrupti natus.</p>
+                <p>El <strong>HARDWARE</strong> es una pieza clave de cualquier proyecto de tecnología, aún en estos tiempos donde la Nube nos ha hecho olvidar que el hardware existe y que sin equipos no se puede ejecutar nada.
+                Pero no solo el hardware cobra importancia desde el punto de vista de la infraestructura y la capacidad de ejecutar procesos y aplicaciones de manera eficiente. En la actualidad, las ciberamenzas y ataques parecen no tener limites y el hardware tambien es victima de esto.                 
+                A través de nuestras alianzas estratégicas con las marcas líderes del mercado, más los skills técnicos de nuestros expertos contamos soluciones para las problemáticas actuales.</p>
             </div>
 
                 <div class="container">
@@ -62,7 +64,7 @@
             
                 <div> 
                     <h2>Software</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos rem dolorem velit voluptas harum delectus at sit architecto quas repellendus hic recusandae ipsa similique voluptatem libero error, nulla distinctio quidem!</p>    
+                        <p>Rise Technology pone a disposición de nuestros clientes, las mejores soluciones de software, que le ayudaran a controlar y automatizar todos los aspectos administrativos, productivos y ejecutivos de su empresa. Invertir en un buen <strong>SOFTWARE</strong> los hará más eficientes, logrando maximizar el tiempo de sus recursos, tanto financieros, humanos y físicos, para la consecución de sus metas.</p>    
                 </div>
 
                     <div class="container"> 
@@ -71,7 +73,11 @@
 
                 <div> 
                     <h2>Auditoria - Seguridad</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos rem dolorem velit voluptas harum delectus at sit architecto quas repellendus hic recusandae ipsa similique voluptatem libero error, nulla distinctio quidem!</p>    
+                    <p>La <strong>AUDITORIA</strong>  y La <strong>SEGURIDAD</strong> son 2 servicios que van practicamente de la mano, uno ayuda en la gestion del riesgo, nos ayuda a detectar cuales son los sistemas criticos de la empresa para saber cuales debemos proteger para mantener su integridad y la otra previene el acceso hacia nuestra infraestructura interna, sistemas y datos. 
+                    Nuestras tecnicas y metodos de <strong>AUDITORIA</strong>, ayudados por la tecnologia, facilitan la identificacion de riesgos y por ende una mejor interpretacion de lo que necesitan internamente nuestros clientes. <br>
+                    Cumplimos con las normas de auditoria ISAE3402, ISAE3000, auditorías de cumplimiento BCRA, PCI-DSS, Forensia Digital, y auditorías AD HOC. <br>
+                    Por parte de la <strong>SEGURIDAD</strong>, nuestros servicios de Análisis de Vulnerabilidades y de Penetration Test, permiten detectar cuáles son los problemas de seguridad en su infraestructura y verifcar cuáles son los vectores de ataque que podrian ser usados por un cibercriminal o intruso para vulnerar su infraestructura y tomar el control de la misma.
+                    </p>    
                 </div>
 
                     <div class="container"> 
