--- a/pages/whoare.html
+++ b/pages/whoare.html
@@ -54,7 +54,10 @@
         <div>
             <div>
                 <h2>Nosotros</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam suscipit dignissimos, maiores nobis, quisquam, sapiente modi non quia dolores consectetur dolorem? Labore necessitatibus itaque dolorem vero perspiciatis voluptate corrupti natus.</p>
+                <p>Somos un proveedor de soluciones y servicios informáticos líder en transformación digital y ciberseguridad. <br>
+                La empresa permite, facilita y acelera la transformación digital de los negocios de sus clientes, conectando organizaciones de todos los sectores con nuestros proveedores de TI de primera clase. <br>
+                El crecimiento de Rise Tech se sustenta en su estrategia tridimensional de expansión geográfica y de canales de venta.</P>
+                
             </div>
                     <div class="container">
                         <img src="../images/imggrupo.png" alt="Grupo Risetech" >
@@ -62,7 +65,8 @@
             
                 <div> 
                     <h2>Objetivo</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos rem dolorem velit voluptas harum delectus at sit architecto quas repellendus hic recusandae ipsa similique voluptatem libero error, nulla distinctio quidem!</p>    
+                        <p>Ayudamos a nuestros clientes a desarrollar sus negocios implementando la transformación digital basada en tecnologías de información avanzadas y en herramientas de ciberseguridad. <br>
+                        Nuestra empresa es un socio y proveedor fiable de soluciones y servicios para nuestros clientes de Latinoamérica.</p>    
                 </div>
 
                     <div class="container"> 
