Entrega Proyecto Final - Se modifican hover de navbar y se ajustan botones form

--- a/pages/client.html
+++ b/pages/client.html
@@ -39,7 +39,7 @@
             <li><a href="../index.html">Inicio</a></li>
                   <li> <a href="whoare.html">Conocenos</a></li>
                       <li> <a href="solu.html">Soluciones</a></li>
-                    <li class="disabled"> <a href="client.html">Clientes</a></li>
+                    <li class="disabled"> <a class="marcado" href="client.html">Clientes</a></li>
                   <li> <a href="contact.html">Contactanos</a></li>
                 <li> <a href="news.html">Novedades</a></li>
             </ul>
