--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,7 +40,7 @@
                   <li> <a href="whoare.html">Conocenos</a></li>
                       <li> <a href="solu.html">Soluciones</a></li>
                     <li> <a href="client.html">Clientes</a></li>
-                  <li class="disabled"> <a href="contact.html">Contactanos</a></li>
+                  <li class="disabled"> <a class="marcado" href="contact.html">Contactanos</a></li>
                 <li> <a href="news.html">Novedades</a></li>
             </ul>
       </div>
