--- a/pages/news.html
+++ b/pages/news.html
@@ -41,7 +41,7 @@
                       <li> <a href="solu.html">Soluciones</a></li>
                     <li> <a href="client.html">Clientes</a></li>
                   <li> <a href="contact.html">Contactanos</a></li>
-                <li class="disabled"> <a href="news.html">Novedades</a></li>
+                <li class="disabled"> <a class="marcado" href="news.html">Novedades</a></li>
             </ul>
       </div>
     </div>
