--- a/pages/solu.html
+++ b/pages/solu.html
@@ -38,7 +38,7 @@
         <ul class="navbar-nav">
             <li><a href="../index.html">Inicio</a></li>
                   <li> <a href="whoare.html">Conocenos</a></li>
-                      <li class="disabled"> <a href="solu.html">Soluciones</a></li>
+                      <li class="disabled"> <a class="marcado" href="solu.html">Soluciones</a></li>
                     <li> <a href="client.html">Clientes</a></li>
                   <li> <a href="contact.html">Contactanos</a></li>
                 <li> <a href="news.html">Novedades</a></li>
