--- a/pages/whoare.html
+++ b/pages/whoare.html
@@ -38,7 +38,7 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav" style="padding: 25px;">
         <ul class="navbar-nav">
             <li><a href="../index.html">Inicio</a></li>
-                  <li class="disabled"> <a href="whoare.html">Conocenos</a></li>
+                  <li class="disabled"> <a class="marcado" href="whoare.html">Conocenos</a></li>
                       <li> <a href="solu.html">Soluciones</a></li>
                     <li> <a href="client.html">Clientes</a></li>
                   <li> <a href="contact.html">Contactanos</a></li>
