--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </button>
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav" style="padding: 25px;">
         <ul class="navbar-nav">
-            <li class="disabled"><a href="index.html">Inicio</a></li>
+            <li class="disabled"><a class="marcado" href="index.html">Inicio</a></li>
                   <li> <a href="pages/whoare.html">Conocenos</a></li>
                       <li> <a href="pages/solu.html">Soluciones</a></li>
                     <li> <a href="pages/client.html">Clientes</a></li>
