Entrega Proyecto Final - Se modifican hover de navbar y se ajustan botones form

--- a/pages/solu.html
+++ b/pages/solu.html
@@ -64,7 +64,7 @@
             
                 <div> 
                     <h2>Software</h2>
-                        <p>Rise Technology pone a disposición de nuestros clientes, las mejores soluciones de software, que le ayudaran a controlar y automatizar todos los aspectos administrativos, productivos y ejecutivos de su empresa. Invertir en un buen <strong>SOFTWARE</strong> los hará más eficientes, logrando maximizar el tiempo de sus recursos, tanto financieros, humanos y físicos, para la consecución de sus metas.</p>    
+                        <p>Rise Technology pone a disposición de nuestros clientes, las mejores soluciones de <strong>SOFTWARE</strong>, que le ayudaran a controlar y automatizar todos los aspectos administrativos, productivos y ejecutivos de su empresa. Invertir en un buen <strong>SOFTWARE</strong> los hará más eficientes, logrando maximizar el tiempo de sus recursos, tanto financieros, humanos y físicos, para la consecución de sus metas.</p>    
                 </div>
 
                     <div class="container"> 
