Entrega Proyecto Final - Se centra el footer

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -60,12 +60,12 @@
                 <!-- Campos -->
                 <div data-wow-delay=".5s">
                     <!-- Nombre -->
-                    <input type="text" name="name" id="name" required="required" class="form borcam" placeholder="Nombre y Apeliido" />
+                    <input type="text" name="name" id="name" required="required" class="form borcam" placeholder="Nombre y Apellido"/>
                     <!-- Email -->
                     <input type="email" name="email" id="email" required="required" class="form borcam"  placeholder="Email" />
                     <!-- Asunto -->
                     <input type="text" name="subject" id="subject" required="required" class="form borcam"  placeholder="Asunto" />
-                </div> <!-- Fin Div Campos -->
+                </div> <!-- Fin Div Campos --> 
 
                 <!-- Area de Mensaje -->
                 <div data-wow-delay=".5s">
